# Ramadan-Night-Python-Projects

./: README.md
password-generator/: main.py
simple-agent/: main.py  menu.py  pyproject.toml
simple-api/: main.py
simple-chatbot/: main.py  pyproject.toml
time-zone/: main.py  pyproject.toml
todo-cli/: todo.json  todo.py
unit-converter/: main.py
