[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chainlit>=2.4.302",
    "click>=8.1.8",
    "ipython>=8.34.0",
    "openai-agents>=0.0.6",
    "python-dotenv>=1.0.1",
]
